fix overflowing footer

--- a/css/custom.css
+++ b/css/custom.css
@@ -484,7 +484,7 @@ body {
 }
 
 #footer-img {
-    width: 100vw;
+    width: 100%;
     height: 100vmin;
     overflow: hidden;
     background-repeat: no-repeat;
